update my website rename files code dependency maintain database change

--- a/webApp/style/home.css
+++ b/webApp/style/home.css
@@ -1,17 +1,27 @@
-@font-face {
-    font-family: 'SBAggroB';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroB.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+.logo {
+    position: absolute;
+    left: 50%;
+    top: 25%;
+    transform: translate(-50%, -50%);
 }
 
-html {
-    height: 100%;
-    font-family: 'SBAggroB';
+.headBox {
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    transform: translate(-50%, -50%);
 }
 
-a {
-    color: pink;
-    font-size: 50px;
-    text-decoration-line: none;
+.bodyBox {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.footBox {
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
